--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
 		<meta charset="utf-8">
 		<title>eSports wikis Ban Pick Maker</title>
 		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<!--
 		<script type="text/javascript" src="./js/prototype.js"></script>
+		-->
 		<script type="text/javascript" src="./js/main.js"></script>
+		<php
+			$url = "http://webings.net/sample/";                    //Webデータ取得先アドレス
+			$html = file_get_contents($url);                    //Webデータ取得
+			echo $html;                                //Webデータ表示
+		>
 	</head>
 	<body>
 		<main>
