--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Pro Match</title>
+		<link rel="icon" href="./siteicon.png" type="image/png">
 		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<script type="text/javascript" src="./js/tournament.js"></script>
 	</head>
