LeagueIDでソート、再度リスト表示の時に要素削除

--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
 			<article>
 				<section>
 					<div id="input">
-						Start : <input type="number" value=6 step=1 style="width:50px;" id="start"/>
+						LeagueId : <input type="number" value=6 step=1 style="width:50px;" id="start"/>
 						Diff :<input type="number" value=1 step=1 style="width:50px;" id="diff"/>
 						YearFilter :<input type="number" value=2019 style="width:50px;" id="yearFilter"/>(※AllData:-1)
 						<br>
 						output: <input type="submit" id="output" onclick="tournament.GetMatchs($('#start').val() - 0,$('#diff').val() - 0);"/><br>
+						<hr>
+						<p>2:LCS 3:LEC 6:LCK 8:LMS 13:OPL 14:CBLOL 32:TR 42:LJL 51:NA Academy 59:TAL 63:LLA </p>
+						<hr>
 					</div>
-					<hr>
 				</section>
 			</article>
 			<article>
